--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>ShopTech</h1>
 
         <div class="topnav">
-            <a class="active" href="#phones">Phones</a>
+            <a class="active" href="gradedexercise1.html">Phones</a>
             <a href="#tvs">TVs</a>
             <a href="#desktops">Desktops</a>
             <a href="#laptops">Laptops</a>
@@ -34,6 +34,7 @@
     </div>
     <div> <button><a href="https://6gbs4u.axshare.com/#id=24jqfq&p=page_1&g=1">Axure</a> </button>
         <button><a href="https://github.com/manishp321/project00">GitHub</a></button>
+        <p><b>Click to phone to start</b></p>
 </body>
 
 </html>
